--- a/style.css
+++ b/style.css
@@ -288,6 +288,7 @@ table {
     box-sizing: border-box;
     color: #333333;
 }
+
 #skills_group {
     width: 100%;
     padding: 5rem 5rem;
@@ -302,6 +303,7 @@ table {
     text-align: center;
     /* animation: updown 7s ease infinite */
 }
+
 #skills p {
     font-size: 1.3rem;
     margin-bottom: 10px;
@@ -317,13 +319,14 @@ table {
 #projects {
     grid-area: projects;
     height: 100vh;
-    display:grid;
-    place-items:center;
+    display: grid;
+    place-items: center;
     font-size: 5rem;
 }
-#projects h1{
 
-}
+/* #projects h1{
+
+} */
 .highlight {
     color: #0b525b;
 
