--- a/style.css
+++ b/style.css
@@ -357,3 +357,43 @@ table {
     opacity: 1;
     transform: translateX(0);
 }
+
+.modal {
+
+    display: none;
+    position: fixed;
+    z-index: 1;
+    /* left:0; */
+    top: 25%;
+    right: 35%;
+    max-width: 600px;
+    overflow: auto;
+    color: #f6f9fc;
+    background-color: #0b525b;
+    border-radius: 15px;
+    text-align: center;
+}
+
+.close-conatiner {
+    display: flex;
+    justify-content: end;
+}
+
+.close {
+    display: inline-flex;
+    margin: 5px 0 5px 0;
+    font-size: 2rem;
+    /* margin-bottom:20px; */
+    cursor: pointer;
+
+}
+
+.showM {
+    display: block;
+    transition: all 2s;
+}
+
+/* 
+.overlay{
+    
+} */
