--- a/style.css
+++ b/style.css
@@ -372,6 +372,7 @@ table {
     background-color: #0b525b;
     border-radius: 15px;
     text-align: center;
+    opacity: 80%;
 }
 
 .close-conatiner {
