--- a/style.css
+++ b/style.css
@@ -104,7 +104,6 @@ section {
 body {
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
     line-height: 1;
     font-family: 'Poppins', sans-serif;
     background: #f6f9fc;
@@ -142,11 +141,13 @@ table {
 }
 
 #navigation {
+    display: flex;
+    justify-content: end;
     grid-area: nav;
     position: sticky;
     overflow: hidden;
     z-index: 1;
-    top: 0;
+    /* top: 0; */
     background-color: #0b525b;
     opacity: 90%;
 }
@@ -166,12 +167,17 @@ table {
     letter-spacing: 0.2rem;
     color: #f6f9fc;
     opacity: 95%;
+    text-decoration: none;
 }
 
 .nav-link:hover {
     /* color: #2C97B5; */
     transform: scale(1.1);
 
+}
+
+#nav-links-mobile a {
+    color: black;
 }
 
 #about {
@@ -182,11 +188,11 @@ table {
     justify-content: center;
     align-items: center;
     text-align: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 #intro {
-    display: grid;
+    /* display: grid; */
     grid-template-columns: 1fr;
     justify-content: center;
     align-items: center;
@@ -198,33 +204,28 @@ table {
 
 
 #illus img {
-    width: 40rem;
+    width: 33rem;
 
 }
 
 
 #tag-line {
-    font-size: 2.3rem;
+    font-size: clamp(17px, 2.4vw, 60px);
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
-    grid-column: 1/5;
+    grid-column: 1/2;
+    opacity: 80%;
+    grid-column: 1/3;
+    font-weight: 500;
     line-height: 3rem;
-    font-weight: 500;
-    opacity: 80%;
+    /* white-space: nowrap; */
 
-}
-
-#about p {
-    grid-column: 1/4;
-    font-weight: 500;
-    opacity: 80%;
-    line-height: 2rem;
 }
 
 #about h1 {
-    font-size: 6rem;
+    font-size: clamp(40px, 6vw, 300px);
     grid-column: 1/5;
-    /* display:inline-block; */
+
 }
 
 #links {
@@ -280,12 +281,12 @@ table {
 }
 
 #skills {
-    max-width: 100%;
+    width: 100%;
     /* max-width: 1080px; */
     display: grid;
     place-items: center;
     grid-area: skills;
-    height: 100vh;
+    min-height: 100vh;
     font-size: 5rem;
     box-sizing: border-box;
     color: #333333;
@@ -303,6 +304,7 @@ table {
     justify-content: center;
     align-items: center;
     text-align: center;
+    box-sizing: border-box;
     /* animation: updown 7s ease infinite */
 }
 
@@ -320,7 +322,7 @@ table {
 
 #projects {
     grid-area: projects;
-    height: 100vh;
+    min-height: 100vh;
     display: grid;
     place-items: center;
     font-size: 5rem;
@@ -375,6 +377,8 @@ table {
     border-radius: 15px;
     text-align: center;
     opacity: 90%;
+    padding: 2rem;
+    font-size: 1.25rem;
 }
 
 .close-conatiner {
@@ -396,7 +400,20 @@ table {
     transition: all 2s;
 }
 
-/* 
-.overlay{
-    
-} */
+@media(max-width:1336px) {
+    #illus {
+        display: none;
+    }
+
+    #intro {
+        grid-column: 1/3;
+        margin: 0 2rem;
+        /* text-align: center; */
+    }
+}
+
+@media(max-width:800px) {
+    #skills_group {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
