adding project section

--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ video {
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
+    text-decoration: none;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -127,6 +128,7 @@ textarea {
     outline: none;
     background: none;
 }
+
 
 ol,
 ul {
@@ -334,9 +336,74 @@ table {
 #projects {
     grid-area: projects;
     min-height: 100vh;
-    display: grid;
-    place-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    /* justify-content: center; */
+    /* display: none; */
+}
+
+#projects h1 {
     font-size: 5rem;
+    color: #333333;
+}
+
+.projects {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    box-sizing: border-box;
+    width: 100%;
+    /* gap: 40px; */
+    padding: 2rem;
+}
+
+.project {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.5);
+    padding: 2rem;
+    max-width: 500px;
+    width: 100%;
+    border-radius: 1rem;
+}
+
+.project img {
+    width: 25rem;
+    height: 20rem;
+    padding-bottom: 1rem;
+}
+
+.project h4 {
+    font-size: 1.25rem;
+    color: #f6f9fc;
+    font-weight: 500;
+    padding-bottom: 1rem;
+
+}
+
+.project p {
+    font-size: 1.15rem;
+    line-height: 1.55rem;
+}
+
+.project a {
+    color: #f6f9fc;
+    font-size: 1.25rem;
+    font-weight: 500;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+}
+
+.projectlink:hover {
+    opacity: 50%;
+    transform: scale(1.1);
+}
+
+.projectlink:active {
+    opacity: 30%;
 }
 
 #contact {
@@ -511,7 +578,7 @@ table {
     }
 }
 
-@media(max-width:800px) {
+@media(max-width:970px) {
     #skills_group {
         grid-template-columns: repeat(2, 1fr);
     }
