--- a/style.css
+++ b/style.css
@@ -347,6 +347,7 @@ table {
 #projects h1 {
     font-size: 5rem;
     color: #333333;
+
 }
 
 .projects {
@@ -371,9 +372,7 @@ table {
 }
 
 .project img {
-    width: 25rem;
-    height: 20rem;
-    /* padding-bottom: 1rem; */
+    width: 80%;
     border-radius: 0.5rem;
     box-shadow: 5px 5px 5px #212529;
 }
@@ -450,6 +449,12 @@ table {
     /* display: none; */
 }
 
+.input-wrap {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 0%;
+}
+
 #contact-form {
     display: flex;
     flex-direction: column;
@@ -475,9 +480,6 @@ table {
 
 #contact-details input {
     display: block;
-    flex: 1;
-    max-width: 800px;
-    width: 100%;
     box-sizing: border-box;
     background: rgba(0, 0, 0, 0.5);
     padding: 1rem;
