--- a/style.css
+++ b/style.css
@@ -538,7 +538,7 @@ table {
     display: none;
     position: fixed;
     z-index: 1;
-    /* left:0; */
+    left: 0;
     top: 25%;
     right: 35%;
     max-width: 600px;
