--- a/style.css
+++ b/style.css
@@ -543,9 +543,9 @@ table {
     display: none;
     position: fixed;
     z-index: 1;
-    /* left: 0; */
-    top: 25%;
-    right: 25%;
+    left: 30%;
+    top: 30%;
+    /* right: 25%; */
     max-width: 600px;
     overflow: auto;
     color: #f6f9fc;
