--- a/utilities.css
+++ b/utilities.css
@@ -5,9 +5,50 @@
     padding: 1rem;
 }
 
+.card {
+    background-color: #fff;
+    border-radius: 1rem;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2)
+}
+
 .flex {
     display: flex;
     justify-content: center;
     align-items: center;
     height: auto;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    gap: 40px;
+}
+
+.lead {
+    font-size: 1.3rem;
+}
+
+.lead2 {
+    font-size: 1.2rem;
+}
+
+.highlight {
+    color: var(--highlight-color)
+}
+
+@keyframes updown {
+    0% {
+        transform: translateY(-10%);
+    }
+
+    50% {
+        transform: translateY(10%);
+    }
+
+    100% {
+        transform: translateY(-10%);
+    }
 }
