--- a/utilities.css
+++ b/utilities.css
@@ -2,7 +2,7 @@
     max-width: 1100px;
     margin: 0 auto;
     overflow: auto;
-    padding: 1rem;
+    padding: 0 1rem;
 }
 
 .card {
@@ -28,7 +28,7 @@
 }
 
 .lead {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
 }
 
 .lead2 {
