--- a/style.css
+++ b/style.css
@@ -83,7 +83,6 @@ nav {}
     background-color: var(--primary-color);
     color: #fff;
     position: relative;
-
 }
 
 .hero .grid {
@@ -145,7 +144,7 @@ nav {}
 
 .lang_tools {
     padding-top: 100px;
-    height: 500px;
+    height: 100vh;
 }
 
 .lang_tools .flex {
@@ -159,6 +158,7 @@ nav {}
     flex-wrap: wrap;
     justify-content: center;
     gap: 90px;
+    padding: 2rem 0;
 }
 
 .languages img {
@@ -173,4 +173,12 @@ nav {}
 
 .language:hover {
     transform: translateY(-15px);
+}
+
+.projects {
+    background-color: var(--primary-color);
+    color: #fff;
+    height: 80vh;
+    margin-top: 50px;
+    box-shadow: 0 3px 30px rgba(0, 0, 0, 0.8)
 }
