--- a/style.css
+++ b/style.css
@@ -338,7 +338,9 @@ nav {}
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
     }
-
+.contact .flex {
+    flex-direction: column;
+}
 
     .hero,
     .lang_tools,
