--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #01161E;
-    --secondary-color: #0E3444;
-    --highlight-color: #20f84f;
+    --secondary-color: #440e41;
+    --highlight-color: #8820f8;
 
 }
 
